--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,7 +2,7 @@
   margin: 80px 0 0 0;
   padding: 0;
   display: grid;
-  grid-gap: 48px 40px;
+  gap: 48px 40px;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "header header"
@@ -17,7 +17,7 @@
 @media screen and (max-width: 768px) {
   .place {
     margin: 72px 0 0 0;
-    grid-gap: 48px 28px;
+    gap: 48px 28px;
     padding: 0 24px 0;
   }
 
@@ -30,7 +30,7 @@
   .place {
     margin: 48px 0;
     padding: 0;
-    grid-gap: 30px;
+    gap: 30px;
     grid-template-columns: 16px 1fr 16px;
     grid-template-areas:
       "header"
