--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -17,7 +17,7 @@
 
 @media screen and (max-width: 495px) {
   .lead__subtitle {
-    max-width: 288px;
+    min-width: 288px;
     margin: 16px 0 40px 0;
     font-size: 16px;
     line-height: 20px;
