--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 495px) {
   .lead__title {
-    max-width: 288px; 
+    min-width: 288px; 
     font-size: 40px;
     line-height: 44px;
   }
