--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,9 +9,15 @@
   text-align: center;
 }
 
+@media screen and (max-width: 768px) {
+  .lead__title {
+    max-width: 720px;
+  }
+}
+
 @media screen and (max-width: 495px) {
   .lead__title {
-    min-width: 288px;
+    max-width: 288px;
     font-size: 40px;
     line-height: 44px;
   }
